app/assets/stylesheets/common.css.scss
@import "//fonts.googleapis.com/css?family=Della+Respira";
@font-face {
    font-family: 'DellaRespira-Regular';
    font-style: normal;
    font-weight: 400;
    src: url(asset_path('DellaRespira-Regular.eot'));
    src: url(asset_path('DellaRespira-Regular.eot?#iefix')) format('embedded-opentype'),
         url(asset_path('DellaRespira-Regular.woff')) format('woff'),
         url(asset_path('DellaRespira-Regular.ttf')) format('truetype'),
         url(asset_path('DellaRespira-Regular.svg#DellaRespira-Regular')) format('svg');
}

@import "bootstrap/_mixins.scss";

::selection {
    background: #efb7a7;
    color: #fff;
}

::-moz-selection {
    background: #efb7a7;
    color: #fff;
}

[class^='fa-'], [class*=' fa-']{
    &:before {
        font-family: FontAwesome !important;
    }
}

html {
    height: 100%;
    min-height: 100%;
}

body {
    width: 100%;
    height: 100%;
    min-height: 100%;
    background-color: transparent;
    color: #000;
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 13px;
    line-height: 18px;
}

h1 {
    font-family: 'Della Respira', 'DellaRespira-Regular', serif;
    font-size: 28px;
    line-height: 30px;
    font-style: normal;
    font-weight: 400;
    text-shadow: 2px 1px rgba(0, 0, 0, .5);
}

h2 {
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 23px;
    line-height: 23px;
    font-weight: normal;
    text-shadow: 2px 2px rgba(0, 0, 0, .5);
}

h3 {
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 18px;
    line-height: 20px;
    font-weight: normal;
    text-shadow: 2px 2px rgba(0, 0, 0, .5);
}

p, ol, ul, td {
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 13px;
    line-height: 18px;
}

form {
    input, textarea {
        font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
        font-size: 13px;
        line-height: 18px;
    }
}

a {
    color: #f5f4e6;
    text-decoration: none;

    &:visited {
        color: #f5f4e6;
    }

    &:hover {
        color: #B80033;
    }
}

.alert {
    &.pull-left {
        width: 30%;
        min-width: 260px;
        margin-left: 15px;
    }
    
    &.alert-success {
        background-color: rgba(223, 240, 216, .88);
    }
    
    &.alert-danger {
        background-color: rgba(242, 222, 222, .88);
    }
    
    ul {
        padding-left: 20px;
        margin-top: 8px;
    }
    
    li {
        margin-top: 3px;
    }
}

.bg-img {
    display: none;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: no-repeat;
    background-size: cover;
    z-index: -2;
    
    &.active {
        display: block;
    }
}

#bg-slider-controls {
    position: absolute;
    bottom: 71px;
    right: 35px;
    font-size: 0px;
    z-index: 13;
    
    a {
        display: inline-block;
        width: 20px;
        height: 20px;
        background: #fff;
        border: 2px solid #e99924;
        border-radius: 50%;
        margin-left: 8px;
        
        &.active {
            background: #8f0017;
        }
    }
}

#share-links {
    font-size: 18px;
    color: #ddd;
    z-index: 40;
    
    &.affix {
        top: 154px;
        right: 30px;
    }
    
    .social-media {
        width: 30px;
        height: 30px;
        text-shadow: 1px 1px rgba(0, 0, 0, .4);
        background: #a28f7d;
        border-radius: 3px;
        box-shadow: 3px 3px 0 rgba(48, 35, 21, 0.8);
        padding: 6px 8px;
        margin-bottom: 6px;
        overflow: hidden;
        clear: both;
        @include transition(width .3s ease, color .3s ease);
        
        &:before {
            color: #fff;
            padding-right: 6px;
        }
        
        &:hover, &:active, &:focus {
            color: #fafafa;
            text-decoration: none;
        }
        
        &:hover {
            width: auto;
        }
    }
    
    .fa-facebook {
        &:before {
            padding-left: 3px;
            padding-right: 10px;
        }
        
        &:hover {
            background: #415a8d;
        }
    }
    
    .fa-twitter:hover {
        background: #00bbff;
    }
    
    .fa-google-plus:hover {
        background: #f00000;
    }
    
    .fa-linkedin:hover {
        background: #069;
    }
}

#page-wrapper {
    position: relative;
    width: 100%;
    height: 100%;
    min-height: 100%;
    overflow-x: overlay;
    overflow-y: auto;
    z-index: 1;
}

#page-content {
    width: 100%;
    height: 100%;
    min-height: 670px;
    display: table;
}

#top-menu, #bottom-menu {
    background-color: #5f0015;
    background-color: rgba(95, 0, 21, .9);

    display: table-row;
    padding: 0;
    width: 100%;

    .content {
        display: table-cell;
    }
}

#top-menu {
    top: 0;
    min-height: 103px;

    .content {
        position: relative;
        border-bottom: 1px solid #86001d;
        box-shadow: 0px 10px 15px rgba(0, 0, 0, .4);
        padding: 30px 30px 3px 30px;

        .language-options, .menu-options {
            a {
                &:before {
                    content: "|";
                    position: absolute;
                    left: -6px;
                }
    
                &:first-child {
                    &:before {
                        content: "";
                    }
                }
            }
        }

        .language-options {
            position: absolute;
            top: 20px;
            right: 35px;
            
            a {
                position: relative;
                display: inline-block;
                font-size: 12px;
                font-weight: bold;
                color: #cf5037;
                text-decoration: none;
                padding: 3px 8px;

                &:hover, &.active {
                    &:before {
                        color: #cf5037;
                    }
                }
                
                &:hover {
                    background-color: #cf5037;
                    border-radius: 3px;
                    color: #5f0015;
                    text-decoration: none;
                }
                
                &.active {
                    color: #f3be70;
                    
                    &:hover {
                        background-color: #e99924;
                        color: #5f0015;
                    }
                }
            }
        }

        .menu-options {
            float: right;
            padding-top: 32px;
            text-align: right;

            a {
                position: relative;
                display: inline-block;
                font-size: 14px;
                font-weight: bold;
                color: #f5f4e6;
                text-decoration: none;
                padding: 10px;

                &:hover, &.active {
                    background-color: #e99924;
                    border-radius: 3px;
                    color: #5f0015;
                    text-decoration: none;

                    &:before {
                        color: #f5f4e6;
                    }
                }
            }
        }
    }

    img {
        padding-bottom: 17px;
    }
}

#page-body {
    width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    display: table-row;
    top: 104px;
    bottom: 79px;
    overflow: hidden;
    
    & > div {
        min-width: 855px;
        height: auto;
        min-height: 100%;
        max-height: 100%;
        display: table-cell;
        background-color: rgba(245, 226, 146, .2);
        padding: 50px;
        overflow: hidden;
        
        .page-wrap {
            position: relative;
            width: 100%;
            height: 100%;
            
            #noscript {
                position: absolute;
                top: -50px;
                left: -50px;
                right: -50px;
                bottom: -50px;
                background-color: rgba(0, 0, 0, .8);
                color: #fff;
                z-index: 50;
                
                .text-wrap {
                    position: relative;
                    padding-top: 200px;
                    margin: 0 auto;
                    text-align: center;
                }
                
                a {
                    color: #e99924;
                }
            }
        }
    }
}

#bottom-menu {
    bottom: 0;
    min-height: 78px;
    color: #000;
    font-size: 15px;
    font-weight: bold;

    .content {
        border-top: 1px solid #86001d;
        box-shadow: 0px -10px 15px rgba(0, 0, 0, .4);
        padding: 20px;
        
        .wrapper {
            position: relative;
        }
        
        span {
            color: #e99924;
            line-height: 38px;
            padding-right: 15px;
        }
    }

    a {
        color: #cf5037;
        text-decoration: none;
        display: inline-block;
        padding: 10px;
        position: relative;

        &:hover, &.active {
            color: #e99924;
            text-decoration: none;

            &:before {
                color: #cf5037;
            }
        }

        &:before {
            content: "|";
            position: absolute;
            left: -6px;
        }

        &:first-child {
            &:before {
                content: "";
            }
        }
    }
}

#fancybox-outer, #fancybox-content {
    border-radius: 6px;
}

// Auto Generated Stuff

pre {
    background-color: #eee;
    padding: 10px;
    font-size: 11px;
}

div {
    &.field, &.actions {
        margin-bottom: 10px;
    }
}

